5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4185/executions/1831_3177.log
== TEST (2019-06-13 16:17:01) 
-- CODE:
from numpy import*
palavra= input("digite a palavra: ")
a= a
e= e
i= i
u= u
for a in palavra:
	print(a)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:18:20) 
-- CODE:
from numpy import*
palavra= input("digite a palavra: ")
a= a
e= e
i= i
u= u
for i in palavra:
	print(a)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:50) 
-- CODE:
from numpy import*
palavra= input("digite a palavra: ")
a= 0
e= 0
i= 0
o= 0
u= 0

for it in palavra:
	while (palavra==a[it]):
		a= a + 1
		print(a)
	while (palavra== e[it]):
		e= e + 1
		print(e)
	while (palavra==i[it]):
		i= i + 1
		print(i)
	while (palavra==o[it]):
		o= o + 1
		print(o)
	while (palavra==u[it]):
		u= u + 1
		print(u)
		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:10) 
-- CODE:
from numpy import*
palavra= input("digite a palavra: ")
a= 0
e= 0
i= 0
o= 0
u= 0

for it in palavra:
	while (palavra==a):
		a= a + 1
		print(a)
	while (palavra== e):
		e= e + 1
		print(e)
	while (palavra==i):
		i= i + 1
		print(i)
	while (palavra==o):
		o= o + 1
		print(o)
	while (palavra==u):
		u= u + 1
		print(u)
		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:42) 
-- CODE:
from numpy import*
palavra= input("digite a palavra: ")
a= 0
e= 0
i= 0
o= 0
u= 0

for it in palavra:
	while (palavra==a):
		a= a + 1
		print(a)
	while (palavra== e):
		e= e + 1
		print(e)
	while (palavra==i):
		i= i + 1
		print(i)
	while (palavra==o):
		o= o + 1
		print(o)
	while (palavra==u):
		u= u + 1
		print(u)
		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:41:07) 
-- CODE:
from numpy import*
palavra= input("digite a palavra: ")
a= 0
e= 0
i= 0
o= 0
u= 0

for it in palavra:
	while (palavra==a):
		a= a + 1
		print(a)
	while (palavra== e):
		e= e + 1
		print(e)
	while (palavra==i):
		i= i + 1
		print(i)
	while (palavra==o):
		o= o + 1
		print(o)
	while (palavra==u):
		u= u + 1
		print(u)
		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:41:07) 
-- CODE:
from numpy import*
palavra= input("digite a palavra: ")
a= 0
e= 0
i= 0
o= 0
u= 0

for it in palavra:
	while (palavra==a):
		a= a + 1
		print(a)
	while (palavra== e):
		e= e + 1
		print(e)
	while (palavra==i):
		i= i + 1
		print(i)
	while (palavra==o):
		o= o + 1
		print(o)
	while (palavra==u):
		u= u + 1
		print(u)
		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:41:30) 
-- CODE:
from numpy import*
palavra= input("digite a palavra: ")
a= 0
e= 0
i= 0
o= 0
u= 0


	while (palavra==a):
		a= a + 1
		print(a)
	while (palavra== e):
		e= e + 1
		print(e)
	while (palavra==i):
		i= i + 1
		print(i)
	while (palavra==o):
		o= o + 1
		print(o)
	while (palavra==u):
		u= u + 1
		print(u)
		
		
	
	
-- ERROR:
File "XXXX", line 10
    while (palavra==a):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:41:49) 
-- CODE:
from numpy import*
palavra= input("digite a palavra: ")
a= 0
e= 0
i= 0
o= 0
u= 0

for i in palavra:
	while (palavra==a):
		a= a + 1
		print(a)
	while (palavra== e):
		e= e + 1
		print(e)
	while (palavra==i):
		i= i + 1
		print(i)
	while (palavra==o):
		o= o + 1
		print(o)
	while (palavra==u):
		u= u + 1
		print(u)
		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:04) 
-- CODE:
from numpy import*
palavra= input("digite a palavra: ")
a= 0
e= 0
i= 0
o= 0
u= 0

for i in palavra:
	while (palavra==a):
		a= a + 1
		print(a)
	while (palavra== e):
		e= e + 1
		print(e)
	while (palavra==i):
		i= i + 1
		print(i)
	while (palavra==o):
		o= o + 1
		print(o)
	while (palavra==u):
		u= u + 1
		print(u)
		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:45:24) 
-- CODE:
from numpy import*
palavra= input("digite a palavra: ")
a= 0
e= 0
i= 0
o= 0
u= 0

for it in palavra:
	while (palavra==a[it]):
		a= a + 1
		print(a)
	while (palavra== e[it]):
		e= e + 1
		print(e)
	while (palavra==i[it]):
		i= i + 1
		print(i)
	while (palavra==o[it]):
		o= o + 1
		print(o)
	while (palavra==u[it]):
		u= u + 1
		print(u)
		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:47:48) 
-- CODE:
from numpy import*
palavra= input("digite a palavra: ")
t= zeros(5, dtype=str)
a= 0
e= 0
i= 0
o= 0
u= 0

for it in palavra:
	while (palavra==a[it]):
		a= a + 1
		print(a)
	while (palavra== e[it]):
		e= e + 1
		print(e)
	while (palavra==i[it]):
		i= i + 1
		print(i)
	while (palavra==o[it]):
		o= o + 1
		print(o)
	while (palavra==u[it]):
		u= u + 1
		print(u)
		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:33) 
-- CODE:
from numpy import*
palavra= input("digite a palavra: ")
t= zeros(5, dtype=str)
a= 0
e= 0
i= 0
o= 0
u= 0

for it in palavra:
	while (palavra==a[it]):
		a[t]= a + 1
		print(a)
	while (palavra== e[it]):
		e[t]= e + 1
		print(e)
	while (palavra==i[it]):
		i[t]= i + 1
		print(i)
	while (palavra==o[it]):
		o[t]= o + 1
		print(o)
	while (palavra==u[it]):
		u[t]= u + 1
		print(u)
		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:10) 
-- CODE:
from numpy import*
palavra= input("digite a palavra: ")
t= zeros(palavra, dtype=str)
a= 0
e= 0
i= 0
o= 0
u= 0

for it in palavra:
	while (palavra==a[it]):
		a[t]= a + 1
		print(a)
	while (palavra== e[it]):
		e[t]= e + 1
		print(e)
	while (palavra==i[it]):
		i[t]= i + 1
		print(i)
	while (palavra==o[it]):
		o[t]= o + 1
		print(o)
	while (palavra==u[it]):
		u[t]= u + 1
		print(u)
		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
